# ai_lab

./: README.md
p1_flappybird/: index.html  script.js  style.css
p2_qwen_finetuning/: Gemma3_(4B).ipynb  Llama3_(8B)_Ollama.ipynb  Llama3_1_(8B)_Alpaca.ipynb  Qwen3_(14B)_Reasoning_Conversational.ipynb  Qwen3_(4B)_GRPO.ipynb  pyproject.toml
p3_gcolab/: Llama3.1_(8B)-Alpaca_gcolab.ipynb
