[project]
name = "p2-qwen-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "transformers==4.55.4",
    "trl==0.22.2",
    "unsloth>=2025.9.4",
    "vllm>=0.10.2",
]
